--- a/app/src/main/res/layout/another_bottom_fragment.xml
+++ b/app/src/main/res/layout/another_bottom_fragment.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00ff00"
+    android:background="#ffff00"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/another_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="TextView"
+        android:text="This is another bottom fragment"
         android:textSize="20sp" />
 
 </LinearLayout>
